Update 게시판 서버 만들기2.md
일지 업데이트

--- a/develop diary/게시판 서버 만들기2.md
+++ b/develop diary/게시판 서버 만들기2.md
@@ -48,6 +48,13 @@ plugin 입력 및 내 코드에 맞는 변수명들고 변경
 코드가 정상적으로 잘작동 하는 것을 확인했다.
 ![](https://i.imgur.com/F5lqnOQ.png)
 
-블로그를 보고 하는 것도 좋지만, 항상 최신의 정보를 가지고 업무를 진행해야겠다.
+옛날 정보를 가지고 오히려 해결책이될 수 있겠지만,  항상 최신의 정보를 가지고 업무를 
+진행해야한다.
 
-옛날 정보를 가지고 옿
+![300](https://i.imgur.com/vHMYd3Z.png)
+
+조심하자..
+
+아니 근데 처음에는 왜 작동했던거야...
+
+
