--- a/mySQL/6. mySQL 통계 응용.md
+++ b/mySQL/6. mySQL 통계 응용.md
@@ -24,6 +24,10 @@
 
 
 4. 네이버 email 을 사용하여 앱개발 종합반을 신청한 주문의 결제수단별 주문건수 세어보기
+	SELECT course_title as 코스 ,payment_method as 결제유형 ,count(payment_method) as 결제건수 FROM orders o
+	WHERE o.email LIKE '%naver.com'
+	GROUP BY o.payment_method
+![](https://i.imgur.com/UVanhiz.png)
 
 
 
