--- a/NODE JS Knowlege/Practice/1. Sequelize (ORM)과 mySQL 같은 DB는 어떠한 역할을 가지고 있는가.md
+++ b/NODE JS Knowlege/Practice/1. Sequelize (ORM)과 mySQL 같은 DB는 어떠한 역할을 가지고 있는가.md
@@ -37,3 +37,19 @@
 		Knex > PostgreSQL, MySQL, SQLite3
 
 
+# Sequelize
+
+![](https://i.imgur.com/ztxwy8y.png)
+
+## Node JS의 대표적은 ORM 라이브러리
+
+-   시퀄라이즈(Sequelize)는 Node.js의 Module이다.
+-   시퀄라이즈는 ORM 라이브러리이다.
+-   시퀄라이즈는 SQL 작업을 쉽게 할 수 있도록 도와주는 라이브러리이다.
+-   시퀄라이즈를 사용하면 자바스크립트 코드로 SQL을 제어할 수 있다.
+-   시퀄라이즈로 MySQL, MariaDB, PostgreSQL, SQLite, MSSQL 등 다양한 RDBMS와 
+		호환된다. (프로젝트를 다른 데이터베이스로 전환할 대 편리하다.)
+-   시퀄라이즈(ORM)을 사용하는 이유는 위에서 살펴보았 듯 자바스크립트 구문을 알아서 
+		SQL로 바꿔주기 때문이다.
+-   SQL 언어를 직접 사용하지 않아도 자바스크립트만으로 RDBMS를 조작할 수 있고, 
+	  SQL을 몰라도 RDBMS를 어느 정도 다룰 수 있다.
