--- a/mySQL/0. SQL Query.md
+++ b/mySQL/0. SQL Query.md
@@ -28,4 +28,14 @@
 
 ## DML  (Data Manipulation Language)
 	기본 패턴에는 4가지로 구성
-	1. 데이터 조회 
+	1. 데이터 조회 : SELECT 
+	2. 데이터 입력 : INSERT
+	3. 데이터 수정 : UPDATE
+	4. 데이터 삭제 : DELETE
+
+## DDL (Data Definition Language)
+	기본 패턴에는 4가지 구성
+	1. CREATE 문 : 객체 생성할 때 사용
+	2. DROP 문 : 이미 생서된 객체를 삭제할 때 사용
+	3. ALTER 문 : 기존에 생성된 객체를 변경 할 때 사용 (CREATE / DROP 비슷)
+	4. TRUNCATE 문 : DELETE문 
