--- a/비슷한그램.md
+++ b/비슷한그램.md
@@ -2,7 +2,8 @@
 # 비슷한 그램
 ---
 로고
-<p> <img src = 'URL' width = '400'></p>
+<p> <img src = 'https://i.imgur.com/lP3FE7f.png
+' width = 300></p>
 ---
 <p>인스타와 비슷한 그램</p>
 <p>어디서 본듯한 비슷한그램 </p>
