--- a/이큐브랩/node/mini_Project/협업 미니 프로젝트 3(비슷한그램).md
+++ b/이큐브랩/node/mini_Project/협업 미니 프로젝트 3(비슷한그램).md
@@ -1,12 +1,15 @@
 
 # 비슷한 그램
+
 ---
-로고
-<p> <img src = 'https://i.imgur.com/lP3FE7f.png
-' width = 300></p>
+
+로고 (디자인 및 작명 : 이정훈)
+<p> <img src = 'https://i.imgur.com/lP3FE7f.png' width = 300></p>
+
 ---
-<p>인스타와 비슷한 그램</p>
-<p>어디서 본듯한 비슷한그램 </p>
+
+<p>뭐 대충 비슷하구만그램 </p>
+
 ---
 
 #### 📆 프로젝트 기간
@@ -16,7 +19,7 @@
 
 #### 📡 배포 링크 :
 
-swagger : URL
+swagger : http://f1rstweb.shop/api-docs
 
 ---
 
@@ -33,11 +36,12 @@ Team S.A
 <p>
 <img src = 'https://i.imgur.com/RMSBMYQ.jpg'>
 </p>
----
+
+-----
 
 📑ERD 설계
 
----
+-----
 
 #### 🧰 기술 스택
 -   👤 프론트엔드: Bootstrap, React, axios
@@ -74,7 +78,7 @@ Team S.A
 	What to do❓ : 
 
 🐻 이정훈
-	What to do❓ : 
+	What to do❓ : 로그인/Social 로그인, follow/unfollow
 
 ---
 
@@ -124,3 +128,6 @@ Team S.A
 | 🗃  | 데이버베이스 관련 수정 | Perform database related changes. |
 | 🔊  | 로그 추가/수정 | Add or update logs. |
 | 🙈 | 아이콘 | 코드 | 설명 | 원문 |
+
+![](https://i.imgur.com/87hIpB4.png)
+
